Implement JDBC based Presto driver
Pulling out common Presto code into new presto-common driver (modeled after the relationship between, ex: `googleanalytics` and `google)`

Putting common QP/HoneySQL logic into the new (abstract) :presto-common driver

Updating :presto driver to extend from the new common driver and only adding HTTP/REST API related methods

Adding implementation of Presto JDBC driver, named :presto-jdbc, extending from :presto-common and :sql-jdbc

Adapting code from the existing Presto driver where appropriate

TODO: fix test failures, cleanup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -767,7 +767,9 @@ jobs:
                   - /home/circleci/metabase/metabase/modules/drivers/googleanalytics/target
                   - /home/circleci/metabase/metabase/modules/drivers/mongo/target
                   - /home/circleci/metabase/metabase/modules/drivers/oracle/target
+                  - /home/circleci/metabase/metabase/modules/drivers/presto-common/target
                   - /home/circleci/metabase/metabase/modules/drivers/presto/target
+                  - /home/circleci/metabase/metabase/modules/drivers/presto-jdbc/target
                   - /home/circleci/metabase/metabase/modules/drivers/redshift/target
                   - /home/circleci/metabase/metabase/modules/drivers/snowflake/target
                   - /home/circleci/metabase/metabase/modules/drivers/sparksql/target
