--- a/modules/drivers/presto-jdbc/resources/metabase-plugin.yaml
+++ b/modules/drivers/presto-jdbc/resources/metabase-plugin.yaml
@@ -1,10 +1,10 @@
 info:
-  name: Metabase Presto Driver
-  version: 1.0.0-SNAPSHOT
-  description: Allows Metabase to connect to Presto databases.
+  name: Metabase Presto JDBC Driver
+  version: 1.0.0-350-SNAPSHOT
+  description: Allows Metabase to connect to Presto databases using the Presto JDBC driver
 driver:
-  name: presto
-  display-name: Presto
+  name: presto-jdbc
+  display-name: Presto JDBC
   lazy-load: true
   parent: presto-common
   connection-properties:
@@ -19,6 +19,9 @@ driver:
     - user
     - password
     - ssl
+    - merge:
+        - additional-options
+        - placeholder: "trustServerCertificate=false"
   connection-properties-include-tunnel-config: true
 init:
   - step: load-namespace
